KNOWN ISSUES:

- Grenadier bombs resolve to DC 0 under multiplayer
- Tiefling needs better race pictures

CHANGES:

- added Banishment, Ensnaring and Staggering Smite spells
- added Oath of Ancient subclass
- improved Merciless gui presentation
- improved translation terms
- included Raise Dead spells on selection lists