@@ -779,7 +779,6 @@ AttributeModifierTieflingIntelligenceAbilityScoreIncrease	FeatureDefinitionAttri
 AttributeModifierTieflingStrengthAbilityScoreIncrease	FeatureDefinitionAttributeModifier	FeatureDefinition	d6662cc1-1ad4-5bc9-ad2a-47888f952823
 AttributeModifierWildMasterSummonSpiritBeastAC	FeatureDefinitionAttributeModifier	FeatureDefinition	3fbffdaf-348c-5e32-aebe-6b2a93696630
 AttributeModifierWildMasterSummonSpiritBeastHP	FeatureDefinitionAttributeModifier	FeatureDefinition	7d081a22-9a79-5039-8652-471aa0c2f4e1
-AutoPreparedSpells{NAME}	FeatureDefinitionAutoPreparedSpells	FeatureDefinition	8ed25b66-1547-5a60-9d78-e3c1b0750ec0
 AutoPreparedSpellsAncientForest	FeatureDefinitionAutoPreparedSpells	FeatureDefinition	d8e3a948-e182-50a1-9ef4-f013a8a0436f
 AutoPreparedSpellsArcanist	FeatureDefinitionAutoPreparedSpells	FeatureDefinition	82245fef-4569-5ac9-8e11-8447d946aa5c
 AutoPreparedSpellsDeadMaster	FeatureDefinitionAutoPreparedSpells	FeatureDefinition	fb2d7ec3-4662-5ee2-b5d8-3dee24f34d64
@@ -798,6 +797,7 @@ AutoPreparedSpellsHatred	FeatureDefinitionAutoPreparedSpells	FeatureDefinition	8
 AutoPreparedSpellsInnovationAlchemy	FeatureDefinitionAutoPreparedSpells	FeatureDefinition	b85f31f8-8640-5851-bb5d-208cfe756082
 AutoPreparedSpellsInnovationArmor	FeatureDefinitionAutoPreparedSpells	FeatureDefinition	2477faba-defe-50d7-98a9-6b4aeef8cb68
 AutoPreparedSpellsInnovationWeapon	FeatureDefinitionAutoPreparedSpells	FeatureDefinition	dd309c08-cc5f-57c3-938e-82a0494a6c14
+AutoPreparedSpellsOathOfAncients	FeatureDefinitionAutoPreparedSpells	FeatureDefinition	8fa00b8b-be61-5e63-abf3-e250d27588da
 BattleStartedListenerMonkPerfectSelf	FeatureDefinition	FeatureDefinition	ce9a8a3b-71c6-5bd5-9fef-4be8c1fcddc7
 BonusCantripAncientForest	FeatureDefinitionBonusCantrips	FeatureDefinition	3caea6e1-5db7-5273-b4ce-4cbb5e34794f
 BonusCantripElementalistMinorElemental	FeatureDefinitionBonusCantrips	FeatureDefinition	2195abf8-b200-5218-a126-a57019c4d256
@@ -1798,7 +1798,6 @@ AttributeModifierTieflingIntelligenceAbilityScoreIncrease	FeatureDefinitionAttri
 AttributeModifierTieflingStrengthAbilityScoreIncrease	FeatureDefinitionAttributeModifier	FeatureDefinitionAttributeModifier	d6662cc1-1ad4-5bc9-ad2a-47888f952823
 AttributeModifierWildMasterSummonSpiritBeastAC	FeatureDefinitionAttributeModifier	FeatureDefinitionAttributeModifier	3fbffdaf-348c-5e32-aebe-6b2a93696630
 AttributeModifierWildMasterSummonSpiritBeastHP	FeatureDefinitionAttributeModifier	FeatureDefinitionAttributeModifier	7d081a22-9a79-5039-8652-471aa0c2f4e1
-AutoPreparedSpells{NAME}	FeatureDefinitionAutoPreparedSpells	FeatureDefinitionAutoPreparedSpells	8ed25b66-1547-5a60-9d78-e3c1b0750ec0
 AutoPreparedSpellsAncientForest	FeatureDefinitionAutoPreparedSpells	FeatureDefinitionAutoPreparedSpells	d8e3a948-e182-50a1-9ef4-f013a8a0436f
 AutoPreparedSpellsArcanist	FeatureDefinitionAutoPreparedSpells	FeatureDefinitionAutoPreparedSpells	82245fef-4569-5ac9-8e11-8447d946aa5c
 AutoPreparedSpellsDeadMaster	FeatureDefinitionAutoPreparedSpells	FeatureDefinitionAutoPreparedSpells	fb2d7ec3-4662-5ee2-b5d8-3dee24f34d64
@@ -1817,6 +1816,7 @@ AutoPreparedSpellsHatred	FeatureDefinitionAutoPreparedSpells	FeatureDefinitionAu
 AutoPreparedSpellsInnovationAlchemy	FeatureDefinitionAutoPreparedSpells	FeatureDefinitionAutoPreparedSpells	b85f31f8-8640-5851-bb5d-208cfe756082
 AutoPreparedSpellsInnovationArmor	FeatureDefinitionAutoPreparedSpells	FeatureDefinitionAutoPreparedSpells	2477faba-defe-50d7-98a9-6b4aeef8cb68
 AutoPreparedSpellsInnovationWeapon	FeatureDefinitionAutoPreparedSpells	FeatureDefinitionAutoPreparedSpells	dd309c08-cc5f-57c3-938e-82a0494a6c14
+AutoPreparedSpellsOathOfAncients	FeatureDefinitionAutoPreparedSpells	FeatureDefinitionAutoPreparedSpells	8fa00b8b-be61-5e63-abf3-e250d27588da
 BonusCantripAncientForest	FeatureDefinitionBonusCantrips	FeatureDefinitionBonusCantrips	3caea6e1-5db7-5273-b4ce-4cbb5e34794f
 BonusCantripElementalistMinorElemental	FeatureDefinitionBonusCantrips	FeatureDefinitionBonusCantrips	2195abf8-b200-5218-a126-a57019c4d256
 BonusCantripRiftWalkWardingBond	FeatureDefinitionBonusCantrips	FeatureDefinitionBonusCantrips	275d70b8-13f5-5b25-b129-4e3b4ba2a5ec
