@@ -13,7 +13,42 @@
     },
     {
       "$type": "FeatureUnlockByLevel, Assembly-CSharp",
-      "featureDefinition": null
+      "featureDefinition": "Definition:AutoPreparedSpellsOathOfAncients:8fa00b8b-be61-5e63-abf3-e250d27588da",
+      "level": 3
+    },
+    {
+      "$type": "FeatureUnlockByLevel, Assembly-CSharp",
+      "featureDefinition": "Definition:PowerOathOfAncientsAuraWarding:70e274f0-72af-57d7-8afb-1b757d7efabe",
+      "level": 7
     }
-  ]
+  ],
+  "personalityFlagOccurences": [],
+  "morphotypeSubclassFilterTag": "Default",
+  "guiPresentation": {
+    "$type": "GuiPresentation, Assembly-CSharp",
+    "hidden": false,
+    "title": "Subclass/&OathOfAncientsTitle",
+    "description": "Subclass/&OathOfAncientsDescription",
+    "spriteReference": {
+      "$type": "UnityEngine.AddressableAssets.AssetReferenceSprite, Unity.Addressables",
+      "m_AssetGUID": "0c34ece6b6c3ce24cbfbfa4072329436",
+      "m_SubObjectName": "Warlock_Tree",
+      "m_SubObjectType": "UnityEngine.Sprite, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null"
+    },
+    "color": {
+      "$type": "UnityEngine.Color, UnityEngine.CoreModule",
+      "r": 1.0,
+      "g": 1.0,
+      "b": 1.0,
+      "a": 1.0
+    },
+    "symbolChar": "221E",
+    "sortOrder": 0,
+    "unusedInSolastaCOTM": false,
+    "usedInValleyDLC": false
+  },
+  "contentCopyright": "UserContent",
+  "guid": "4761017a-40d4-5554-92e3-afadd0bf2ce7",
+  "contentPack": 9999,
+  "name": "OathOfAncients"
 }
