@@ -4,9 +4,10 @@
 
 - added Banishment, Ensnaring and Staggering Smite spells
 - added Oath of Ancient subclass
+- added level 13th Oath spells to support Level 20 feature
 - improved Merciless gui presentation
 - improved translation terms
-- included Raise Dead spells on selection lists
+- included Raise Skeleton spells on selection lists
 
 1.4.32.11:
 
